--- a/jual-flm.html
+++ b/jual-flm.html
@@ -313,7 +313,7 @@
           <div class="text-sm opacity-90">💲 Rp 92.000</div>
           <div class="mt-2 flex gap-2 items-center">
             <button data-audio="audio12" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-            <a href="pembayaran.html?produk=FLM%20Febri%20Remix" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <a href="pembayaran.html?produk=FLM%20Febri%20Remix" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -327,8 +327,8 @@
           <div class="font-semibold leading-tight">FLM Jawa Pride</div>
           <div class="text-sm opacity-90">💲 Rp 90.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio13" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-            <a href="pembayaran.html?produk=FLM%20Jawa%20Pride" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-audio="audio13" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <a href="pembayaran.html?produk=FLM%20Jawa%20Pride" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -342,8 +342,8 @@
           <div class="font-semibold leading-tight">FLM Jawa Pride V2</div>
           <div class="text-sm opacity-90">💲 Rp 90.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio14" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-            <a href="pembayaran.html?produk=FLM%20Jawa%20Pride%20V2" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-audio="audio14" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <a href="pembayaran.html?produk=FLM%20Jawa%20Pride%20V2" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -357,8 +357,8 @@
           <div class="font-semibold leading-tight">FLM Jawa Pride V3</div>
           <div class="text-sm opacity-90">💲 Rp 90.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio15" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-            <a href="pembayaran.html?produk=FLM%20Jawa%20Pride%20V3" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-audio="audio15" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <a href="pembayaran.html?produk=FLM%20Jawa%20Pride%20V3" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -372,8 +372,8 @@
           <div class="font-semibold leading-tight">FLM JDM KT</div>
           <div class="text-sm opacity-90">💲 Rp 110.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio16" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-            <a href="pembayaran.html?produk=FLM%20JDM%20KT" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-audio="audio16" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <a href="pembayaran.html?produk=FLM%20JDM%20KT" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -425,11 +425,11 @@
       const controls = document.createElement('div');
       controls.className = 'player-controls';
       controls.innerHTML = `
-        <button class="skip-btn" data-skip="-3" title="Mundur 3 detik">⏪ 3s</button>
+        <button class="skip-btn" data-skip="-3" title="Mundur 3 detik">3s</button>
         <span class="time current">0:00</span>
         <input type="range" class="progress" min="0" max="100" value="0" step="0.1">
         <span class="time duration">0:00</span>
-        <button class="skip-btn" data-skip="3" title="Maju 3 detik">3s ⏩</button>
+        <button class="skip-btn" data-skip="3" title="Maju 3 detik">3s</button>
       `;
       container.appendChild(controls);
 
