--- a/jual-flm.html
+++ b/jual-flm.html
@@ -379,6 +379,20 @@
         </div>
         <audio id="audio16" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20JDM%20KT.mp3" preload="metadata"></audio>
       </li>
+            <!-- 17 -->
+      <li class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM JDM KT" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+        <div class="flex-1">
+          <div class="font-semibold leading-tight">FLM EPAM ESTETOD OLD</div>
+          <div class="text-sm opacity-90">💲 Rp 79.000</div>
+          <div class="mt-2 flex gap-2 items-center">
+            <button data-audio="audio17" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <a href="pembayaran.html?produk=FLM%20EPAM%20ESTETOD%20OLD" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
+          </div>
+          <div class="player-controls-container"></div>
+        </div>
+        <audio id="audio17" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/epamold.mp3" preload="metadata"></audio>
+      </li>
 
     </ul>
   </main>
@@ -406,6 +420,7 @@
       audio14: 46,
       audio15: 28,
       audio16: 83
+      audio17: 46
     };
 
     // Helper: format seconds -> mm:ss
