--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
   <meta name="description" content="Muslih Fvnky Shop menjual FLM dan projek FL Studio Mobile, menerima pesanan lagu, jasa mixing mastering, serta penyusunan chord & BPM. Harga murah, fast respon, dan original.">
   <meta name="keywords" content="Muslih Fvnky Shop, Jual FLM, Projek FL Studio Mobile, Pemesanan Lagu, Jasa Mixing Mastering, Nyusun Chord, BPM, Musik Murah">
   <meta name="author" content="Muslih Fvnky">
-  <link rel="canonical" href="https://namadomainkamu.com/">
-  
+  <!-- Pastikan canonical mengarah ke domain yang kamu pakai -->
+  <link rel="canonical" href="https://muslihfvnkyshop.my.id/">
+  <meta name="robots" content="index, follow">
+
   <!-- Open Graph / Social Media Preview -->
   <meta property="og:title" content="Muslih Fvnky Shop - FLM & Jasa Musik Murah">
   <meta property="og:description" content="Jual projek FL Studio Mobile (FLM), jasa mixing mastering, pemesanan lagu, dan nyusun chord & BPM. Harga terjangkau & fast respon.">
   <meta property="og:image" content="https://i.imgur.com/4jIRft9.jpeg">
-  <meta property="og:url" content="https://namadomainkamu.com/">
+  <meta property="og:url" content="https://muslihfvnkyshop.my.id/">
   <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Muslih Fvnky Shop - FLM & Jasa Musik Murah">
+  <meta name="twitter:description" content="Jual projek FL Studio Mobile (FLM), jasa mixing mastering, pemesanan lagu, dan nyusun chord & BPM. Harga terjangkau & fast respon.">
+  <meta name="twitter:image" content="https://i.imgur.com/4jIRft9.jpeg">
   
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
