--- a/jasa-chord-dan-bpm.html
+++ b/jasa-chord-dan-bpm.html
@@ -3,8 +3,31 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jasa Nyusun Chord & BPM Lagu — Muslih Fvnky</title>
+
+  <!-- SEO Meta -->
+  <title>Jasa Nyusun Chord & BPM Lagu — Muslih Fvnky Shop</title>
+  <meta name="description" content="Pesan jasa nyusun chord & BPM lagu di Muslih Fvnky Shop. Cocok untuk musisi pemula maupun profesional. Harga murah, proses cepat, dan hasil jelas.">
+  <meta name="keywords" content="Jasa Nyusun Chord, BPM Lagu, Musik, Muslih Fvnky Shop, Chord Gitar, Tempo Lagu, Produksi Musik">
+  <meta name="author" content="Muslih Fvnky">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://muslihfvnkyshop.my.id/jasa-chord-dan-bpm.html">
+
+  <!-- Open Graph / Social Media -->
+  <meta property="og:title" content="Jasa Nyusun Chord & BPM Lagu — Muslih Fvnky Shop">
+  <meta property="og:description" content="Pesan jasa nyusun chord & BPM lagu dengan harga terjangkau. Cocok untuk semua genre musik.">
+  <meta property="og:image" content="https://i.imgur.com/ghNd4So.jpeg">
+  <meta property="og:url" content="https://muslihfvnkyshop.my.id/jasa-chord-dan-bpm.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Jasa Nyusun Chord & BPM Lagu — Muslih Fvnky Shop">
+  <meta name="twitter:description" content="Pesan jasa nyusun chord & BPM lagu dengan harga terjangkau. Cocok untuk semua genre musik.">
+  <meta name="twitter:image" content="https://i.imgur.com/ghNd4So.jpeg">
+
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
     body {
       background-image: url('https://i.imgur.com/p0K2KQs.png');
@@ -17,7 +40,6 @@
       background: rgba(0,0,0,0.72);
       min-height: 100vh;
     }
-    /* Input transparan + border mint */
     input, select, textarea {
       background-color: transparent !important;
       border: 2px solid #0FFCBE !important;
@@ -28,7 +50,6 @@
     input:focus, select:focus, textarea:focus {
       box-shadow: 0 0 10px #0FFCBE;
     }
-    /* Tombol style biru-mint */
     .btn-primary {
       background-color: #106EBE;
       border: 2px solid #0FFCBE;
