--- a/jasa-mixing.html
+++ b/jasa-mixing.html
@@ -4,6 +4,28 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jasa Mixing & Mastering — Muslih Fvnky</title>
+
+  <!-- ======= Tambahan SEO & Social (ditambahkan tanpa mengubah isi lainnya) ======= -->
+  <meta name="description" content="Pesan jasa Mixing & Mastering profesional di Muslih Fvnky Shop. Kualitas terbaik, harga terjangkau, kirim file FLM via Google Drive/Dropbox. Proses cepat dan hasil rapi." />
+  <meta name="keywords" content="Mixing, Mastering, Jasa Mixing, Jasa Mastering, FLM, Muslih Fvnky, Produksi Musik, Audio Mixing, Audio Mastering" />
+  <meta name="author" content="Muslih Fvnky" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://muslihfvnkyshop.my.id/jasa-mixing-mastering.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Jasa Mixing & Mastering — Muslih Fvnky" />
+  <meta property="og:description" content="Pesan jasa Mixing & Mastering profesional di Muslih Fvnky Shop. Kualitas terbaik, harga terjangkau, kirim file FLM via Google Drive/Dropbox." />
+  <meta property="og:image" content="https://i.imgur.com/ghNd4So.jpeg" />
+  <meta property="og:url" content="https://muslihfvnkyshop.my.id/jasa-mixing-mastering.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Jasa Mixing & Mastering — Muslih Fvnky" />
+  <meta name="twitter:description" content="Pesan jasa Mixing & Mastering profesional di Muslih Fvnky Shop. Kualitas terbaik, harga terjangkau." />
+  <meta name="twitter:image" content="https://i.imgur.com/ghNd4So.jpeg" />
+  <!-- ========================================================================== -->
+
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     /* Background sesuai request */
