--- a/jual-flm.html
+++ b/jual-flm.html
@@ -4,6 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Muslih Fvnky Shop – Daftar FLM</title>
+
+  <!-- ======= SEO & Social (ditambahkan tanpa menghapus konten lain) ======= -->
+  <meta name="description" content="Daftar FLM (projek FL Studio Mobile) dari Muslih Fvnky Shop — lengkap dengan preview, harga, dan tombol pembelian. FLM siap diimport ke FL Studio Mobile. Hubungi WA untuk bantuan.">
+  <meta name="keywords" content="FLM, FL Studio Mobile, Jual FLM, Projek FLM, Muslih Fvnky Shop, Beat, Musik, Beli FLM" />
+  <meta name="author" content="Muslih Fvnky" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://muslihfvnkyshop.my.id/daftar-flm.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Muslih Fvnky Shop – Daftar FLM" />
+  <meta property="og:description" content="Daftar FLM (projek FL Studio Mobile) dari Muslih Fvnky Shop — lihat preview, harga, dan langsung beli lewat tombol pembayaran atau WA." />
+  <meta property="og:image" content="https://i.imgur.com/ghNd4So.jpeg" />
+  <meta property="og:url" content="https://muslihfvnkyshop.my.id/daftar-flm.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Muslih Fvnky Shop – Daftar FLM" />
+  <meta name="twitter:description" content="Daftar FLM (projek FL Studio Mobile) — preview & harga tersedia. Hubungi WA untuk pembelian." />
+  <meta name="twitter:image" content="https://i.imgur.com/ghNd4So.jpeg" />
+  <!-- =================================================================== -->
+
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -252,8 +274,8 @@
           <div class="font-semibold leading-tight">FLM Arif Sopan</div>
           <div class="text-sm opacity-90">💲 Rp 50.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio8" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-            <a href="pembayaran.html?produk=FLM%20Arif%20Sopan" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-audio="audio8" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <a href="pembayaran.html?produk=FLM%20Arif%20Sopan" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -267,8 +289,8 @@
           <div class="font-semibold leading-tight">FLM Lambada</div>
           <div class="text-sm opacity-90">💲 Rp 92.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio9" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-            <a href="pembayaran.html?produk=FLM%20Lambada" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-audio="audio9" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <a href="pembayaran.html?produk=FLM%20Lambada" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -282,8 +304,8 @@
           <div class="font-semibold leading-tight">FLM Angga Fvnky</div>
           <div class="text-sm opacity-90">💲 Rp 83.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio10" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-            <a href="pembayaran.html?produk=FLM%20Angga%20Fvnky" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-audio="audio10" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <a href="pembayaran.html?produk=FLM%20Angga%20Fvnky" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -297,8 +319,8 @@
           <div class="font-semibold leading-tight">FLM Enaff V1</div>
           <div class="text-sm opacity-90">💲 Rp 95.500</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio11" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-            <a href="pembayaran.html?produk=FLM%20Enaff%20V1" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-audio="audio11" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
+            <a href="pembayaran.html?produk=FLM%20Enaff%20V1" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -312,7 +334,7 @@
           <div class="font-semibold leading-tight">FLM Febri Remix</div>
           <div class="text-sm opacity-90">💲 Rp 80.000</div>
           <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio12" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+            <button data-audio="audio12" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
             <a href="pembayaran.html?produk=FLM%20Febri%20Remix" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
