--- a/pembayaran.html
+++ b/pembayaran.html
@@ -4,6 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pay To Muslih Fvnky</title>
+
+  <!-- ======= SEO & Social (ditambahkan tanpa mengubah konten lain) ======= -->
+  <meta name="description" content="Halaman pembayaran Muslih Fvnky — nominal, nomor DANA, QRIS, dan opsi untuk konfirmasi pembayaran lewat WhatsApp. Mudah dan aman untuk transfer pembayaran FLM atau jasa musik." />
+  <meta name="keywords" content="Pembayaran, DANA, QRIS, Muslih Fvnky, Pembayaran FLM, Transfer, Konfirmasi WA" />
+  <meta name="author" content="Muslih Fvnky" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://muslihfvnkyshop.my.id/pembayaran.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Pembayaran Muslih Fvnky" />
+  <meta property="og:description" content="Nomor DANA, QRIS & konfirmasi pembayaran via WhatsApp untuk pembelian FLM atau jasa musik di Muslih Fvnky." />
+  <meta property="og:image" content="https://i.imgur.com/vxI5p9w.png" />
+  <meta property="og:url" content="https://muslihfvnkyshop.my.id/pembayaran.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pembayaran Muslih Fvnky" />
+  <meta name="twitter:description" content="Nomor DANA, QRIS & konfirmasi pembayaran via WhatsApp untuk pembelian FLM atau jasa musik di Muslih Fvnky." />
+  <meta name="twitter:image" content="https://i.imgur.com/vxI5p9w.png" />
+  <!-- =================================================================== -->
+
   <style>
     body {
       font-family: Arial, sans-serif;
