--- a/pemesanan-lagu.html
+++ b/pemesanan-lagu.html
@@ -4,6 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pemesanan Remix Lagu</title>
+
+  <!-- ======= Tambahan SEO & Social (ditambahkan tanpa menghapus konten lain) ======= -->
+  <meta name="description" content="Pemesanan remix lagu di Muslih Fvnky — harga 80K–125K, layanan custom sesuai style, langsung konfirmasi via WhatsApp. Isi form, kirim, dan admin akan proses." />
+  <meta name="keywords" content="Pemesanan Remix, Remix Lagu, Jasa Remix, Muslih Fvnky, Pesan Remix, Harga Remix" />
+  <meta name="author" content="Muslih Fvnky" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://muslihfvnkyshop.my.id/pemesanan-remix.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Pemesanan Remix Lagu — Muslih Fvnky" />
+  <meta property="og:description" content="Pesan remix lagu di Muslih Fvnky. Harga 80K–125K tergantung kesulitan. Kirim detail & link YouTube, konfirmasi via WhatsApp." />
+  <meta property="og:image" content="https://i.imgur.com/ghNd4So.jpeg" />
+  <meta property="og:url" content="https://muslihfvnkyshop.my.id/pemesanan-remix.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pemesanan Remix Lagu — Muslih Fvnky" />
+  <meta name="twitter:description" content="Pesan remix lagu di Muslih Fvnky. Harga 80K–125K. Kirim judul, style & link YouTube, lalu konfirmasi via WA." />
+  <meta name="twitter:image" content="https://i.imgur.com/ghNd4So.jpeg" />
+  <!-- =================================================================== -->
+
   <style>
     body {
       font-family: Arial, sans-serif;
