--- a/request-flm.html
+++ b/request-flm.html
@@ -4,6 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Request FLM - Muslih Fvnky</title>
+
+  <!-- ======= SEO & Social (ditambahkan tanpa menghapus konten lain) ======= -->
+  <meta name="description" content="Request FLM (projek FL Studio Mobile) ke Muslih Fvnky — kirim judul & link YouTube, konfirmasi pembayaran via DANA/QRIS, langsung request lewat WhatsApp." />
+  <meta name="keywords" content="Request FLM, FL Studio Mobile, Request Beat, Muslih Fvnky, Jual FLM, Pesan FLM" />
+  <meta name="author" content="Muslih Fvnky" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://muslihfvnkyshop.my.id/request-flm.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Request FLM - Muslih Fvnky" />
+  <meta property="og:description" content="Request FLM (projek FL Studio Mobile) — isi judul & link YouTube, kirim langsung ke WhatsApp untuk konfirmasi dan estimasi harga." />
+  <meta property="og:image" content="https://i.imgur.com/ghNd4So.jpeg" />
+  <meta property="og:url" content="https://muslihfvnkyshop.my.id/request-flm.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Request FLM - Muslih Fvnky" />
+  <meta name="twitter:description" content="Request FLM (projek FL Studio Mobile) — kirim detail & link YouTube, konfirmasi via WhatsApp." />
+  <meta name="twitter:image" content="https://i.imgur.com/ghNd4So.jpeg" />
+  <!-- =================================================================== -->
+
   <style>
     body {
       font-family: Arial, sans-serif;
