--- a/index.html
+++ b/index.html
@@ -13,66 +13,51 @@
   <meta name="description" content="Muslih Fvnky Shop menjual FLM dan projek FL Studio Mobile, menerima pesanan lagu, jasa mixing mastering, serta penyusunan chord & BPM. Harga murah, fast respon, dan original.">
   <meta name="keywords" content="Muslih Fvnky Shop, Jual FLM, Projek FL Studio Mobile, Pemesanan Lagu, Jasa Mixing Mastering, Nyusun Chord, BPM, Musik Murah">
   <meta name="author" content="Muslih Fvnky">
-  <!-- Pastikan canonical mengarah ke domain yang kamu pakai -->
   <link rel="canonical" href="https://muslihfvnkyshop.my.id/">
   <meta name="robots" content="index, follow">
 
-  <!-- Open Graph / Social Media Preview -->
+  <!-- Open Graph / Twitter -->
   <meta property="og:title" content="Muslih Fvnky Shop - FLM & Jasa Musik Murah">
   <meta property="og:description" content="Jual projek FL Studio Mobile (FLM), jasa mixing mastering, pemesanan lagu, dan nyusun chord & BPM. Harga terjangkau & fast respon.">
   <meta property="og:image" content="https://i.imgur.com/4jIRft9.jpeg">
-  <meta property="og:url" content="https://muslihfvnkyshop.my.id/">
-  <meta property="og:type" content="website">
-
-  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Muslih Fvnky Shop - FLM & Jasa Musik Murah">
-  <meta name="twitter:description" content="Jual projek FL Studio Mobile (FLM), jasa mixing mastering, pemesanan lagu, dan nyusun chord & BPM. Harga terjangkau & fast respon.">
-  <meta name="twitter:image" content="https://i.imgur.com/4jIRft9.jpeg">
-  
+
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
+    :root{
+      --accent1: #06b6d4;
+      --accent2: #3b82f6;
+      --accent3: #9333ea;
+      --accent4: #ec4899;
+    }
+
     body {
       background: url('https://i.imgur.com/p0K2KQs.png') no-repeat center center fixed;
       background-size: cover;
-      font-family: sans-serif;
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      color: white;
     }
     .overlay {
-      background-color: rgba(0,0,0,0.7);
+      background-color: rgba(0,0,0,0.72);
       min-height: 100vh;
       padding: 2rem 0;
     }
-    .fade-slide {
-      opacity: 0;
-      transform: translateY(20px);
-      animation: fadeSlide 1s forwards;
-    }
-    @keyframes fadeSlide {
-      to { opacity: 1; transform: translateY(0); }
-    }
-    .glow-btn {
-      transition: all 0.3s ease-in-out;
-      border: 2px solid #0FFCBE;
-      background: rgba(16,110,190,0.8);
-      backdrop-filter: blur(6px);
-    }
-    .glow-btn:hover {
-      background: #0FFCBE;
-      box-shadow: 0 0 15px #0FFCBE, 0 0 25px #00f0ff;
-      color: black;
-    }
+
+    /* Header gradient card */
     .animated-gradient {
       background: linear-gradient(-45deg, #106EBE, #0FFCBE, #106EBE, #0FFCBE);
       background-size: 400% 400%;
       animation: gradientMove 6s ease infinite;
-      padding: 1rem 1.5rem;
+      padding: 1rem 1.25rem;
       border-radius: 12px;
       display: flex;
       align-items: center;
       gap: 1rem;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+      box-shadow: 0 6px 30px rgba(0,0,0,0.45);
+      max-width: 900px;
+      margin: 1rem auto;
       position: relative;
       z-index: 10;
     }
@@ -81,59 +66,193 @@
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-    .float-logo {
-      width: 56px;
-      height: 56px;
-      border-radius: 50%;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
-      animation: float 3s ease-in-out infinite;
-      flex-shrink: 0;
-      opacity: 1;
-      transform: none;
+    .float-logo { width:56px; height:56px; border-radius:50%; box-shadow: 0 6px 20px rgba(0,0,0,0.5); }
+    .header-extra { margin-left:auto; display:flex; gap:0.5rem; align-items:center; }
+
+    /* nav quick link */
+    .header-link {
+      background: rgba(255,255,255,0.06);
+      padding: 6px 10px;
+      border-radius: 999px;
+      font-weight: 600;
+      color: white;
+      display:inline-flex; gap:8px; align-items:center;
+      border: 1px solid rgba(255,255,255,0.04);
+      transition: transform .18s ease, background .18s ease;
     }
-    @keyframes float {
-      0%,100% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
+    .header-link:hover { transform: translateY(-3px); background: rgba(255,255,255,0.10); }
+
+    /* Buttons grid */
+    .btn-grid { display: grid; grid-template-columns: 1fr; gap: 0.75rem; }
+    @media (min-width: 768px) { .btn-grid { grid-template-columns: repeat(2, minmax(0,1fr)); } }
+    @media (min-width: 1024px) { .btn-grid { grid-template-columns: repeat(4, minmax(0,1fr)); } }
+
+    /* neutral button style (kept) */
+    .glow-btn {
+      transition: all 0.28s ease-in-out;
+      border: 2px solid #0FFCBE;
+      background: rgba(16,110,190,0.8);
+      backdrop-filter: blur(6px);
+      color: white;
+      display: inline-block;
+      min-width: 220px;
+      text-align: center;
+      padding: .9rem 1rem;
+      font-weight: 700;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.35);
+    }
+    .glow-btn:hover { background: #0FFCBE; color: black; box-shadow: 0 10px 30px rgba(15,252,190,0.18); transform: translateY(-4px); }
+
+    /* PRIMARY Testimoni button (highlight) */
+    .primary-btn {
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
+      padding: 1rem 1.25rem;
+      border-radius: 14px;
+      font-weight: 800;
+      color: #06121a;
+      background: linear-gradient(90deg, var(--accent1), var(--accent2), var(--accent3));
+      background-size: 200% 100%;
+      box-shadow:
+        0 10px 40px rgba(9,102,137,0.18),
+        inset 0 -6px 18px rgba(0,0,0,0.08);
+      transform: translateZ(0);
+      transition: transform .22s ease, box-shadow .22s ease, background-position .6s ease;
+    }
+    .primary-btn:hover {
+      transform: translateY(-6px) scale(1.01);
+      box-shadow: 0 18px 50px rgba(9,102,137,0.22);
+      background-position: 100% 0;
+    }
+
+    /* icon circle */
+    .primary-icon {
+      width: 38px; height: 38px; border-radius: 10px;
+      background: rgba(255,255,255,0.95); display:flex; align-items:center; justify-content:center;
+      font-weight: 900;
+      box-shadow: 0 6px 18px rgba(2,6,23,0.25);
+    }
+
+    /* badge count */
+    .badge {
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      background: #ff4d6d;
+      color: white;
+      font-weight: 800;
+      font-size: 12px;
+      padding: 6px 8px;
+      border-radius: 999px;
+      box-shadow: 0 8px 22px rgba(255,77,109,0.18);
+      transform-origin: center;
+      animation: badgePop .5s cubic-bezier(.2,.9,.3,1);
+    }
+    @keyframes badgePop {
+      from { transform: scale(0.6); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    /* subtle pulse behind primary button to draw attention */
+    .primary-pulse {
+      position: absolute;
+      width: 140%;
+      height: 160%;
+      background: radial-gradient(circle at center, rgba(6,182,212,0.14), transparent 30%);
+      filter: blur(20px);
+      z-index: -1;
+      border-radius: 18px;
+      animation: pulse 2.6s infinite;
+      opacity: .9;
+    }
+    @keyframes pulse {
+      0% { transform: scale(.9); opacity: .55; }
+      50% { transform: scale(1.05); opacity: .9; }
+      100% { transform: scale(.9); opacity: .55; }
+    }
+
+    /* accessibility focus */
+    a:focus, button:focus {
+      outline: 3px solid rgba(99,102,241,0.22);
+      outline-offset: 4px;
+      border-radius: 10px;
     }
   </style>
 </head>
-<body class="text-white font-sans">
+<body>
 
-  <!-- Header & Logo -->
-  <header class="animated-gradient" style="max-width: 2xl; margin: 1rem auto;">
+  <!-- Header -->
+  <header class="animated-gradient">
     <img src="https://i.imgur.com/4jIRft9.jpeg" alt="Logo Muslih Fvnky" class="float-logo">
     <div>
       <h1 class="text-xl font-bold">Muslih Fvnky Shop</h1>
-      <p class="text-sm text-gray-200">Tempat Jual Beli FLM Murah</p>
+      <p class="text-sm text-white/90">Tempat Jual Beli FLM Murah</p>
+    </div>
+
+    <!-- quick link to Testimoni di kanan -->
+    <div class="header-extra">
+      <!-- other quick links could go here -->
+      <a href="testimoni.html" class="header-link" title="Lihat Testimoni" target="_blank" rel="noopener">
+        ⭐ Testimoni
+      </a>
     </div>
   </header>
 
   <div class="overlay">
     <div class="max-w-2xl mx-auto p-4">
 
-      <!-- Welcome Section -->
-      <section class="mb-8 fade-slide" style="animation-delay: 0.3s;">
+      <!-- Welcome -->
+      <section class="mb-8" style="animation: fadeSlide 1s both; --delay: .3s;">
         <h2 class="text-xl font-bold mb-2">Selamat Datang di Muslih Fvnky Shop</h2>
         <p class="text-gray-200 text-sm">
-          Saya menjual FLM (Projek FL Studio Mobile) dan menerima pemesanan lagu. 
-          Anda juga bisa menggunakan jasa mixing mastering, serta penyusunan chord & BPM. 
+          Saya menjual FLM (Projek FL Studio Mobile) dan menerima pemesanan lagu.
+          Anda juga bisa menggunakan jasa mixing mastering, serta penyusunan chord & BPM.
           Website ini akan diupdate setiap hari, jadi nantikan projek menarik lainnya!
         </p>
       </section>
 
-      <!-- Product Section -->
-      <section class="mb-8 fade-slide" style="animation-delay: 0.5s;">
+      <!-- Buttons -->
+      <section class="mb-8">
         <h3 class="text-lg font-semibold border-b-2 border-[#0FFCBE] inline-block mb-3">Silahkan Pilih!!</h3>
-        <div class="flex flex-col md:flex-row md:space-x-4 space-y-2 md:space-y-0">
-          <a href="jual-flm.html" class="block rounded-lg px-4 py-3 text-center glow-btn">Jual FLM</a>
-          <a href="pemesanan-lagu.html" class="block rounded-lg px-4 py-3 text-center glow-btn">Pemesanan Lagu</a>
-          <a href="jasa-mixing.html" class="block rounded-lg px-4 py-3 text-center glow-btn">Jasa Mixing & Mastering</a>
-          <a href="jasa-chord-dan-bpm.html" class="block rounded-lg px-4 py-3 text-center glow-btn">Jasa Nyusun Chord & BPM</a>
+
+        <div class="btn-grid">
+          <a href="jual-flm.html" class="glow-btn">Jual FLM</a>
+          <a href="pemesanan-lagu.html" class="glow-btn">Pemesanan Lagu</a>
+          <a href="jasa-mixing.html" class="glow-btn">Jasa Mixing & Mastering</a>
+          <a href="jasa-chord-dan-bpm.html" class="glow-btn">Jasa Nyusun Chord & BPM</a>
+
+          <!-- Primary Testimoni button: make it span two columns on large screens -->
+          <div style="grid-column: 1 / -1;">
+            <a
+              href="testimoni.html"
+              target="_blank"
+              rel="noopener"
+              class="primary-btn"
+              role="button"
+              aria-label="Buka halaman testimoni pelanggan (buka di tab baru)"
+              style="position:relative; width:100%; padding-left:1.25rem; padding-right:1.25rem;"
+            >
+              <span class="primary-pulse" aria-hidden="true"></span>
+
+              <!-- icon -->
+              <span class="primary-icon" aria-hidden="true">📸</span>
+
+              <!-- label -->
+              <span style="font-size:1.05rem; letter-spacing:0.02em;">Lihat Semua Testimoni</span>
+
+              <!-- badge (example count) -->
+              <span class="badge" aria-hidden="true">9</span>
+            </a>
+          </div>
         </div>
       </section>
 
-      <!-- Keunggulan Kami -->
-      <section class="mb-8 fade-slide" style="animation-delay: 0.7s;">
+      <!-- Keunggulan -->
+      <section class="mb-8">
         <h3 class="text-lg font-semibold border-b-2 border-[#0FFCBE] inline-block mb-3">Keunggulan Kami</h3>
         <ul class="list-disc list-inside text-sm text-gray-200">
           <li>✅ Harga Murah</li>
@@ -144,19 +263,27 @@
       </section>
 
       <!-- Kontak -->
-      <section class="mb-8 text-sm text-gray-200 fade-slide" style="animation-delay: 0.9s;">
+      <section class="mb-8 text-sm text-gray-200">
         <h3 class="text-lg font-semibold border-b-2 border-[#0FFCBE] inline-block mb-3">Hubungi Kami</h3>
         <p>WhatsApp: <a href="https://wa.me/6283821665970" class="underline hover:text-[#0FFCBE]">Wa Bang Muslih Ganteng</a></p>
         <p>Instagram: <a href="https://www.instagram.com/mslihh.wav" class="underline hover:text-[#0FFCBE]">@mslihh.wav</a></p>
         <p>Youtube: <a href="https://youtube.com/@muslihfvnky" class="underline hover:text-[#0FFCBE]">Muslih Fvnky</a></p>
       </section>
 
-      <!-- Footer -->
-      <footer class="text-center text-gray-500 text-xs border-t border-gray-700 pt-4 fade-slide" style="animation-delay: 1.1s;">
+      <footer class="text-center text-gray-500 text-xs border-t border-gray-700 pt-4">
         <p>© 2025 Muslih Fvnky Shop. All rights reserved.</p>
       </footer>
 
     </div>
   </div>
+
+  <!-- small inline animation for fadeSlide (used above) -->
+  <script>
+    // tiny helper to apply progressive animation delays (keeps markup tidy)
+    document.querySelectorAll('section').forEach((el, i) => {
+      el.style.animation = 'fadeSlide 0.9s ease-out forwards';
+      el.style.animationDelay = (0.25 * i) + 's';
+    });
+  </script>
 </body>
 </html>
