--- a/testimoni.html
+++ b/testimoni.html
@@ -3,94 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <!-- Basic page title & description -->
-  <title>Testimoni Pelanggan — Muslih Fvnky Shop | muslihfvnkyshop.my.id</title>
-  <meta name="description" content="Kumpulan screenshot testimoni dan bukti transaksi asli dari pembeli Muslih Fvnky Shop. Lihat review, bukti pembayaran, dan chat pelanggan." />
-  <meta name="keywords" content="Muslih Fvnky, FLM, testimoni, bukti pembayaran, review pelanggan, muslihfvnkyshop" />
-  <meta name="author" content="Muslih Fvnky Shop" />
-  <meta name="robots" content="index, follow" />
-
-  <!-- Canonical / URL -->
-  <link rel="canonical" href="https://muslihfvnkyshop.my.id/testimoni.html" />
-
-  <!-- Sitemap (if tersedia) -->
-  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://muslihfvnkyshop.my.id/sitemap.xml" />
-
-  <!-- Open Graph / Social sharing -->
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Muslih Fvnky Shop" />
-  <meta property="og:title" content="Testimoni Pelanggan — Muslih Fvnky Shop" />
-  <meta property="og:description" content="Lihat screenshot testimoni & bukti transaksi asli dari pembeli Muslih Fvnky Shop." />
-  <meta property="og:url" content="https://muslihfvnkyshop.my.id/testimoni.html" />
-  <meta property="og:image" content="https://i.imgur.com/ghNd4So.jpeg" />
-  <meta property="og:image:alt" content="Logo Muslih Fvnky Shop" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Testimoni Pelanggan — Muslih Fvnky Shop" />
-  <meta name="twitter:description" content="Lihat screenshot testimoni & bukti transaksi asli dari pembeli Muslih Fvnky Shop." />
-  <meta name="twitter:image" content="https://i.imgur.com/ghNd4So.jpeg" />
-
-  <!-- Mobile / theme -->
-  <meta name="theme-color" content="#06b6d4" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-
-  <!-- Preconnect & fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&display=swap" rel="stylesheet">
-
-  <!-- Tailwind -->
+  <title>Testimoni Pelanggan – Muslih Fvnky Shop</title>
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- JSON-LD Structured Data (Organization + WebSite) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@graph": [
-      {
-        "@type": "Organization",
-        "@id": "https://muslihfvnkyshop.my.id/#org",
-        "name": "Muslih Fvnky Shop",
-        "url": "https://muslihfvnkyshop.my.id",
-        "logo": "https://i.imgur.com/ghNd4So.jpeg",
-        "sameAs": []
-      },
-      {
-        "@type": "WebSite",
-        "@id": "https://muslihfvnkyshop.my.id/#website",
-        "url": "https://muslihfvnkyshop.my.id",
-        "name": "Muslih Fvnky Shop",
-        "publisher": {
-          "@id": "https://muslihfvnkyshop.my.id/#org"
-        },
-        "potentialAction": {
-          "@type": "SearchAction",
-          "target": "https://muslihfvnkyshop.my.id/search?q={search_term_string}",
-          "query-input": "required name=search_term_string"
-        }
-      },
-      {
-        "@type": "CollectionPage",
-        "url": "https://muslihfvnkyshop.my.id/testimoni.html",
-        "name": "Testimoni Pelanggan — Muslih Fvnky Shop",
-        "description": "Kumpulan screenshot testimoni & bukti transaksi asli dari pembeli Muslih Fvnky Shop."
-      }
-    ]
-  }
-  </script>
-
-  <!-- Page styling (keaslian HTMLmu tetap dipertahankan) -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&display=swap" rel="stylesheet">
   <style>
-    :root{
-      --accent-grad: linear-gradient(90deg,#06b6d4,#3b82f6,#9333ea,#ec4899);
-    }
-    .hero-card{background: rgba(0,0,0,0.45);backdrop-filter: blur(6px);border:1px solid rgba(255,255,255,0.06);}
-    .hero-title{font-family:"Poppins",system-ui; font-weight:800; color:#fff; text-shadow:0 2px 0 rgba(0,0,0,0.55),0 8px 24px rgba(2,6,23,0.45);}
-    .title-underline{height:8px; border-radius:999px; background:var(--accent-grad); width:160px; margin-top:12px;}
-    .hero-sub{color:rgba(255,255,255,0.92);}
-    .img-card img{width:100%; height:100%; object-fit:cover; transition:transform .32s ease, box-shadow .32s ease;}
-    .img-card:hover img{transform:scale(1.04); box-shadow:0 20px 40px rgba(2,6,23,0.45);}
+    :root { --accent-grad: linear-gradient(90deg,#06b6d4,#3b82f6,#9333ea,#ec4899); }
+    .hero-card { background: rgba(0,0,0,0.45); backdrop-filter: blur(6px); border:1px solid rgba(255,255,255,0.06); }
+    .hero-title { font-family:"Poppins",system-ui; font-weight:800; color:#fff; text-shadow:0 2px 0 rgba(0,0,0,0.55),0 8px 24px rgba(2,6,23,0.45); }
+    .title-underline { height:8px; border-radius:999px; background: var(--accent-grad); width:160px; margin-top:12px; }
+    .hero-sub { color:rgba(255,255,255,0.92); }
+    .img-card img { width:100%; height:100%; object-fit:cover; transition:transform .32s ease, box-shadow .32s ease; }
+    .img-card:hover img { transform:scale(1.04); box-shadow:0 20px 40px rgba(2,6,23,0.45); }
   </style>
 </head>
 <body class="min-h-screen bg-gradient-to-b from-cyan-600 to-blue-800 text-white">
@@ -114,41 +37,40 @@
   <!-- GALERI -->
   <main class="max-w-6xl mx-auto px-4 pb-16">
     <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-      <!-- Gambar 1-9 -->
+      <!-- Gambar 1-9 dari GitHub raw link -->
       <div class="img-card bg-white rounded-2xl overflow-hidden">
-        <img src="https://raw.githubusercontent.com/muslihfvnky/testimoni-shop/main/1.jpg" alt="Testimoni 1" loading="lazy">
+        <img src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/1.jpg" alt="Testimoni 1" loading="lazy">
       </div>
       <div class="img-card bg-white rounded-2xl overflow-hidden">
-        <img src="https://raw.githubusercontent.com/muslihfvnky/testimoni-shop/main/2.jpg" alt="Testimoni 2" loading="lazy">
+        <img src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/2.jpg" alt="Testimoni 2" loading="lazy">
       </div>
       <div class="img-card bg-white rounded-2xl overflow-hidden">
-        <img src="https://raw.githubusercontent.com/muslihfvnky/testimoni-shop/main/3.jpg" alt="Testimoni 3" loading="lazy">
+        <img src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/3.jpg" alt="Testimoni 3" loading="lazy">
       </div>
       <div class="img-card bg-white rounded-2xl overflow-hidden">
-        <img src="https://raw.githubusercontent.com/muslihfvnky/testimoni-shop/main/4.jpg" alt="Testimoni 4" loading="lazy">
+        <img src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/4.jpg" alt="Testimoni 4" loading="lazy">
       </div>
       <div class="img-card bg-white rounded-2xl overflow-hidden">
-        <img src="https://raw.githubusercontent.com/muslihfvnky/testimoni-shop/main/5.jpg" alt="Testimoni 5" loading="lazy">
+        <img src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/5.jpg" alt="Testimoni 5" loading="lazy">
       </div>
       <div class="img-card bg-white rounded-2xl overflow-hidden">
-        <img src="https://raw.githubusercontent.com/muslihfvnky/testimoni-shop/main/6.jpg" alt="Testimoni 6" loading="lazy">
+        <img src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/6.jpg" alt="Testimoni 6" loading="lazy">
       </div>
       <div class="img-card bg-white rounded-2xl overflow-hidden">
-        <img src="https://raw.githubusercontent.com/muslihfvnky/testimoni-shop/main/7.jpg" alt="Testimoni 7" loading="lazy">
+        <img src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/7.jpg" alt="Testimoni 7" loading="lazy">
       </div>
       <div class="img-card bg-white rounded-2xl overflow-hidden">
-        <img src="https://raw.githubusercontent.com/muslihfvnky/testimoni-shop/main/8.jpg" alt="Testimoni 8" loading="lazy">
+        <img src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/8.jpg" alt="Testimoni 8" loading="lazy">
       </div>
       <div class="img-card bg-white rounded-2xl overflow-hidden">
-        <img src="https://raw.githubusercontent.com/muslihfvnky/testimoni-shop/main/9.jpg" alt="Testimoni 9" loading="lazy">
+        <img src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/9.jpg" alt="Testimoni 9" loading="lazy">
       </div>
     </section>
   </main>
 
   <!-- FOOTER -->
   <footer class="text-center py-6 mt-10 bg-black bg-opacity-10">
-    <p class="text-sm text-white/80">© 2025 Muslih Fvnky Shop — Terima kasih atas kepercayaanmu.</p>
+    <p class="text-sm text-white/80">© 2025 Muslih Fvnky Shop — Terima kasih atas kepercayaannya.</p>
   </footer>
-
 </body>
 </html>
