--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" href="https://i.imgur.com/aRy9T88.png" sizes="512x512">
   <link rel="apple-touch-icon" href="https://i.imgur.com/aRy9T88.png">
 
-  <!-- SEO Meta Tags (perbaikan: keywords) -->
+  <!-- SEO Meta Tags -->
   <title>Muslih Fvnky Shop - Jual FLM, Projek FL Studio Mobile, Jasa Musik Murah</title>
   <meta name="description" content="Muslih Fvnky Shop menjual FLM dan projek FL Studio Mobile, menerima pesanan lagu, jasa mixing mastering, serta penyusunan chord & BPM. Harga murah, fast respon, dan original.">
   <meta name="keywords" content="Muslih Fvnky Shop, Jual FLM, Projek FL Studio Mobile, Pemesanan Lagu, Jasa Mixing Mastering, Nyusun Chord, BPM, Musik Murah">
@@ -55,7 +55,7 @@
       padding: 1rem 1.25rem;
       border-radius: 12px;
       display: flex;
-      flex-wrap: wrap; /* <-- important */
+      flex-wrap: wrap; /* <-- penting supaya tidak mendorong layout */
       align-items: center;
       gap: 1rem;
       box-shadow: 0 6px 30px rgba(0,0,0,0.45);
@@ -158,9 +158,9 @@
       <p class="text-sm text-white/90">Tempat Jual Beli FLM Murah</p>
     </div>
 
-    <!-- quick link to Testimoni di kanan -->
+    <!-- quick link to Testimoni di kanan (dibuka di halaman yang sama sekarang) -->
     <div class="header-extra" aria-hidden="false">
-      <a href="testimoni.html" class="header-link" title="Lihat Testimoni" target="_blank" rel="noopener">⭐ Testimoni</a>
+      <a href="testimoni.html" class="header-link" title="Lihat Testimoni">⭐ Testimoni</a>
     </div>
   </header>
 
@@ -187,7 +187,7 @@
 
           <!-- Primary Testimoni button spans full width -->
           <div style="grid-column: 1 / -1;">
-            <a href="testimoni.html" target="_blank" rel="noopener" class="primary-btn" aria-label="Buka halaman Testimoni di tab baru">
+            <a href="testimoni.html" class="primary-btn" aria-label="Buka halaman Testimoni di halaman yang sama">
               <span class="primary-icon" aria-hidden="true">📸</span>
               <span>Lihat Semua Testimoni</span>
               <span class="badge" aria-hidden="true">9</span>
@@ -222,9 +222,5 @@
     </div>
   </div>
 
-  <!-- small inline script to apply slight stagger (keeps markup tidy) -->
-  <script>
-    // progressive animation delays already set inline above; nothing else needed.
-  </script>
 </body>
 </html>
